--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
 body{
-  background-image: url("./images/1616543411_19-p-nebesnii-fon-20.jpg");
+  background-image: url("../../images/1616543411_19-p-nebesnii-fon-20.jpg");
   text-align: center;
 }
